fix: don't adjust logo for dark mode

--- a/src/common/Header/NavBar/NavBar.module.scss
+++ b/src/common/Header/NavBar/NavBar.module.scss
@@ -84,6 +84,11 @@
   &:hover {
     transform: scale(1.1);
   }
+
+  // Disable dark mode adjustment for ImageContainers
+  span {
+    filter: none !important;
+  }
 }
 
 .LogoImage {
